<resources>
    <string name="app_name">Breaking Bad App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="personajes">Personajes</string>
    <string name="frases">Frases</string>
    <string name="muertes">Muertes</string>
    <string name="episodios">Episodios</string>
</resources>